--- a/src/app/components/products/pad/c-pad/c-pad.component.html
+++ b/src/app/components/products/pad/c-pad/c-pad.component.html
@@ -1,1 +1,70 @@
-<p>c-pad works!</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wave Tee</title>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="header-left">
+                <div class="image-box">
+                    <img src="https://www.smartgeneration.it/wp-content/uploads/2022/03/IPAD-PRO-129-2020-SILVER-600x600.jpg" alt="side-image1" class="side-image">
+                </div>
+                
+                <div class="image-box">
+                    <img src="https://www.imagineonline.store/cdn/shop/files/iPad_Pro_Cellular_11_in_4th_generation_Silver_PDP_Image_Position-1a__WWEN_5fd9eb12-dadf-4f61-b07a-ccef744d3a2c.jpg?v=1705482182&width=823" alt="side-image1" class="side-image">
+                </div>    
+                <div class="image-box">    
+                <img src="https://www.ecofone.fr/media/catalog/product/cache/5971c9a572d4164fe62a52956ba993d5/_/i/_image_epr205arg.jpg" alt="side-image3" class="side-image">
+                </div>
+                <div class="image-box">
+                <img src="https://m.media-amazon.com/images/I/51+lNrl7DlL._AC_UF894,1000_QL80_.jpg" alt="side-image4" class="side-image">
+                </div>
+                
+           </div>
+            
+            <div class="header-center">
+                <img id="main-image" src="https://www.smartgeneration.it/wp-content/uploads/2022/03/IPAD-PRO-129-2020-SILVER-600x600.jpg" alt="Logo">
+            </div>
+            <div class="header-right">
+                <div class="header-right">
+                    <div class="product-info">
+                        <h1 id ="title">cPad</h1> 
+                            <div class="first">
+                        
+                                <h2>Diseño innovador</h2>
+                        <p>
+                            En el corazón de cada creación, nos esforzamos por innovar y combinar
+                            las últimas tecnologías con una estética atemporal, brindando
+                            experiencias que sean a la vez prácticas y extraordinarias.
+                        </p>
+                            </div>
+                            <div class="second">
+                        <h2 >Diseño innovador</h2>
+                        <p>
+                            En el corazón de cada creación, nos esforzamos por innovar y combinar
+                            las últimas tecnologías con una estética atemporal, brindando
+                            experiencias que sean a la vez prácticas y extraordinarias.
+                        </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="product-container">
+            <img id="main-product-image" src="https://www.smartgeneration.it/wp-content/uploads/2022/03/IPAD-PRO-129-2020-SILVER-600x600.jpg " alt="cPad" class="product-image">
+            <div class="product-details">
+                <h1>cPad</h1>
+                <p class="description">Arma tu producto a tu gusto  </p>
+                <span class="price">Desde $689.00</span>
+                <a [routerLink]="['/buyPad']" class="add-to-cart" >Armar producto</a>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; cirOS. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
